# ai-agent

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  confluence_client.py  crawler.py  extractor.py  main.py  models.py  scope_guard.py  summarizer.py
