[project]
name = "confluence-ai-agent"
version = "0.1.0"
description = "MVP Python agent for scoped Confluence crawling and summarization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
]

[project.scripts]
confluence-agent = "app.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
